# CMakeExamples

./: README.md
lib_and_exe/: build_linux.sh  build_windows.sh
lib_and_exe/myexe/: CMakeLists.txt
lib_and_exe/mylib/: CMakeLists.txt  mylib.c
lib_and_exe/mylib/include/: mylib.h
opencl_query_android/: CMakeLists.txt  build_android.sh
opencl_query_android/src/: main.cpp
